# sera-cli

./: CLAUDE.md  README.md  justfile  pyproject.toml
src/sera/: __init__.py  deploy.py  main.py
