[build-system]
requires = ["uv_build>=0.9.26,<1.0.0"]
build-backend = "uv_build"

[project]
name = "ai2-sera-cli"
version = "0.1.2"
description = "Translation proxy enabling Claude Code CLI to work with SWE-agent format models"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "starlette",
    "modal",
]

[project.scripts]
sera = "sera:main"
deploy-sera = "sera.deploy:main"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "sera"
module-root = "src"

[dependency-groups]
dev = [
    "huggingface_hub",
    "ruff",
    "ty",
]
